[gd_scene load_steps=11 format=3 uid="uid://bsqhojae3oh41"]

[ext_resource type="Texture2D" uid="uid://qwgjgk5m5rl1" path="res://assets/Art/buttons.png" id="1_1npuy"]
[ext_resource type="Script" uid="uid://ch1favdtyynvg" path="res://scenes/Menu/Scripts/pause_menu.gd" id="1_qq3mx"]
[ext_resource type="Texture2D" uid="uid://bps8r51jxanho" path="res://assets/Art/dad5.png" id="3_wq4gw"]
[ext_resource type="Script" uid="uid://b5qync5fqt7cx" path="res://scenes/Menu/Scripts/Movement_option_button.gd" id="4_vvnub"]
[ext_resource type="PackedScene" uid="uid://qsdmdensuu4v" path="res://scenes/Menu/selection_handle.tscn" id="5_vvnub"]
[ext_resource type="Script" uid="uid://bk533sgnt3mm8" path="res://scenes/Menu/Scripts/pause_button.gd" id="6_onbn4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qq3mx"]
atlas = ExtResource("1_1npuy")
region = Rect2(116, 11, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_wd0t7"]
atlas = ExtResource("1_1npuy")
region = Rect2(174, 11, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq4gw"]
atlas = ExtResource("1_1npuy")
region = Rect2(116, 11, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvnub"]
atlas = ExtResource("1_1npuy")
region = Rect2(116, 11, 48, 33)

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qq3mx")

[node name="Menu" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 330.0
offset_top = 73.0
offset_right = 619.0
offset_bottom = 466.0

[node name="ResumeTouchButton" type="TouchScreenButton" parent="Menu"]
position = Vector2(14, 29)
texture_normal = SubResource("AtlasTexture_qq3mx")
texture_pressed = SubResource("AtlasTexture_wd0t7")

[node name="RichTextLabel2" type="RichTextLabel" parent="Menu/ResumeTouchButton"]
anchors_preset = -1
anchor_right = 3.16667
offset_right = 50.0
offset_bottom = 40.0
mouse_filter = 2
text = "RESUME"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="AudioTouchButton" type="TouchScreenButton" parent="Menu"]
unique_name_in_owner = true
position = Vector2(108, 71)
texture_normal = SubResource("AtlasTexture_wq4gw")
texture_pressed = SubResource("AtlasTexture_wd0t7")

[node name="RichTextLabel" type="RichTextLabel" parent="Menu/AudioTouchButton"]
anchors_preset = -1
anchor_right = 3.16667
offset_left = 3.0
offset_top = 2.0
offset_right = 53.0
offset_bottom = 42.0
mouse_filter = 2
text = "AUDIO"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="MenuTouchButton" type="TouchScreenButton" parent="Menu"]
position = Vector2(203, 28)
texture_normal = SubResource("AtlasTexture_vvnub")
texture_pressed = SubResource("AtlasTexture_wd0t7")

[node name="RichTextLabel2" type="RichTextLabel" parent="Menu/MenuTouchButton"]
anchors_preset = -1
anchor_right = 3.16667
offset_right = 50.0
offset_bottom = 40.0
mouse_filter = 2
text = "MENU"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="MovementOptions" type="Control" parent="Menu"]
layout_mode = 2

[node name="RightHandMode" type="TouchScreenButton" parent="Menu/MovementOptions" node_paths=PackedStringArray("selected_handle")]
position = Vector2(32, 187)
scale = Vector2(0.733333, 0.12)
texture_normal = ExtResource("3_wq4gw")
script = ExtResource("4_vvnub")
movement_option = 1
selected_handle = NodePath("../SelectionHandle")

[node name="LeftHandMode" type="TouchScreenButton" parent="Menu/MovementOptions" node_paths=PackedStringArray("selected_handle")]
position = Vector2(33, 238)
scale = Vector2(0.733333, 0.12)
texture_normal = ExtResource("3_wq4gw")
script = ExtResource("4_vvnub")
movement_option = 2
selected_handle = NodePath("../SelectionHandle")

[node name="OneHandMode" type="TouchScreenButton" parent="Menu/MovementOptions" node_paths=PackedStringArray("selected_handle")]
position = Vector2(32, 298)
scale = Vector2(0.733333, 0.12)
texture_normal = ExtResource("3_wq4gw")
script = ExtResource("4_vvnub")
selected_handle = NodePath("../SelectionHandle")

[node name="SelectionHandle" parent="Menu/MovementOptions" instance=ExtResource("5_vvnub")]
self_modulate = Color(1, 0.164706, 1, 1)
position = Vector2(148, 201)
scale = Vector2(0.8, 0.136)
texture = ExtResource("3_wq4gw")

[node name="PauseButton" type="TouchScreenButton" parent="."]
unique_name_in_owner = true
position = Vector2(888, 65)
scale = Vector2(0.177778, 0.208)
texture_normal = ExtResource("3_wq4gw")
script = ExtResource("6_onbn4")
offscreen_direction = Vector2(1, 0)

[connection signal="released" from="Menu/ResumeTouchButton" to="." method="resume"]
[connection signal="released" from="Menu/AudioTouchButton" to="." method="_on_audio_touch_button_released"]
[connection signal="released" from="Menu/MenuTouchButton" to="." method="_on_menu_touch_button_released"]
[connection signal="released" from="Menu/MovementOptions/RightHandMode" to="Menu/MovementOptions/RightHandMode" method="_on_released"]
[connection signal="released" from="Menu/MovementOptions/LeftHandMode" to="Menu/MovementOptions/LeftHandMode" method="_on_released"]
[connection signal="released" from="Menu/MovementOptions/OneHandMode" to="Menu/MovementOptions/OneHandMode" method="_on_released"]
[connection signal="released" from="PauseButton" to="." method="pause"]
